# greentic-flow

./: .gitignore  CODEX_CI_FIX_REPORT.md  Cargo.toml  GitVersion.yml  README.md  SECURITY_FIX_REPORT.md  all-code-scanning-alerts.json  all-dependabot-alerts.json  build.rs  code-scanning-alerts.json  codex-prompt.txt  coverage-policy.json  dependabot-alerts.json  frequent-components.json  main-code-scanning-alerts.json  pr-changed-files.txt  pr-code-scanning-filtered.json  pr-comment.md  pr-vulnerable-changes.json  security-alerts.json
.codex/: PR-02-authoring-alias-support-and-wizard-plan.md  PR-FLOW-05-schema-ext.md  repo_overview.md
.github/: dependabot.yml  renovate.json
.github/actions/rust-setup/: action.yml
.github/workflows/: auto-tag.yml  ci.yml  codex-security-fix.yml  codex-semver-fix.yml  crates-publish.yml  dependabot-auto-merge.yml  dependabot-automerge.yml  dev-publish.yml  nightly-coverage.yml  nightly-semver.yml  nightly-wizard-e2e.yml  perf.yml  publish-dev-codeartifact.yml  publish-registry.yml  publish.yml  release-binaries.yml  renovate.yml
.greentic/cache/components/v1/sha256:1fcc79bc816b1447d8c9eca7409e83b8e413529905dfcedcd1f96bdfda8691a6/artifacts/: sha256_02d899617ca180fb98e1774ece7f39a49fd37bae273fa5721c8e8a1121e6958b.cwasm  sha256_02d899617ca180fb98e1774ece7f39a49fd37bae273fa5721c8e8a1121e6958b.json  sha256_4d9cd7b7373637bacd212174a26ed0361fe8f3b9f8f2781ca6aa5ecee64d5019.cwasm  sha256_4d9cd7b7373637bacd212174a26ed0361fe8f3b9f8f2781ca6aa5ecee64d5019.json  sha256_7d24cbbf8ecfa35505f26e0caf78ac4fa69ec74065fddbefe29d57ea63447f42.json  sha256_7ea0fe4fe14acab2827baf4d5cef5f973cecedf2868cb2240cc1b40e1da7b724.json  sha256_886b4d436b744dcad2b579b0335b4c2ebb494e9a39e375384722fba04438d29f.json  sha256_c08f77623992b5ae2f6f9e567445404cad1be05ecb63450c5b3c1e64811defee.json
benches/: perf.rs
ci/: cargo-patch-dev.toml  codex_pr_commit.sh  codex_pr_guard.sh  deps-dev.toml  dev-cargo-config.toml  local_check.sh  nightly_coverage.sh  nightly_wizard_e2e.sh
docs/: README.md  add_step_design.md  cli.md
docs/vision/: codex.md  legacy.md  v0_6.md
docs/wizard/: README.md  authoring.md
i18n/: ar-AE.json  ar-DZ.json  ar-EG.json  ar-IQ.json  ar-MA.json  ar-SA.json  ar-SD.json  ar-SY.json  ar-TN.json  ar.json  ay.json  bg.json  bn.json  cs.json  da.json  de.json  el.json  en-GB.json  en.json  es.json  et.json  fa.json  fi.json  fr.json  gn.json  gu.json  hi.json  hr.json  ht.json  hu.json  id.json  it.json  ja.json  km.json  kn.json  ko.json  lo.json  lt.json  lv.json  ml.json  (+26 more)
i18n/wizard/: ar-AE.json  ar-DZ.json  ar-EG.json  ar-IQ.json  ar-MA.json  ar-SA.json  ar-SD.json  ar-SY.json  ar-TN.json  ar.json  ay.json  bg.json  bn.json  cs.json  da.json  de.json  el.json  en-GB.json  en.json  es.json  et.json  fa.json  fi.json  fr.json  gn.json  gu.json  hi.json  hr.json  ht.json  hu.json  id.json  it.json  ja.json  km.json  kn.json  ko.json  lo.json  lt.json  lv.json  ml.json  (+26 more)
registries/: providers.json
schemas/: ygtc.flow.schema.json
scripts/: apply-dev-patch.sh
src/: component_catalog.rs  component_schema.rs  error.rs  flow_bundle.rs  flow_ir.rs  ir.rs  json_output.rs  lib.rs  loader.rs  model.rs  path_safety.rs  qa_runner.rs  questions.rs  resolve_summary.rs  util.rs  wizard_ops.rs  wizard_state.rs
src/add_step/: mod.rs  normalize.rs
src/cache/: config.rs  disk.rs  engine_profile.rs  keys.rs  memory.rs  metadata.rs  mod.rs  singleflight.rs
src/info/: human.rs  mod.rs  report.rs
src/lint/: adapter_resolvable.rs
src/wizard/: mod.rs
tests/: .wizard_scaffold.rs.pending-snap  add_step_advanced.rs  add_step_integration.rs  answers.rs  answers_cli_ops.rs  cache_coverage.rs  component_schema_cli.rs  config_flow.rs  contract_hash.rs  flow_cli_ops.rs  helper_coverage.rs  i18n.rs  info_cli.rs  load_err.rs  load_ok.rs  mcp_node.rs  perf_scaling.rs  perf_support.rs  perf_timeout.rs  schema_validate.rs  singleflight_coverage.rs  slot_schema_validate.rs  stable_oci.rs
tests/common/: mod.rs
tests/data/: mcp_node_ok.ygtc
tests/e2e/frequent-components/: README.md
tests/e2e/frequent-components/adaptive-card/: default.answers.json  personalised.answers.json
tests/e2e/frequent-components/events-to-message/: personalised.answers.json
tests/e2e/frequent-components/http/: personalised.answers.json
tests/e2e/frequent-components/llm-openai/: default.answers.json
tests/e2e/frequent-components/message-to-events/: personalised.answers.json
tests/e2e/frequent-components/questions-and-answers/: default.answers.json  support.form.json
tests/e2e/frequent-components/templates/: default.answers.json
tests/fixtures/registry/components/acme_widget_1/: apply_update_config.cbor  qa_update.cbor
tools/: i18n.sh
