[package]
name = "greentic-flow"
version = "0.4.53"
edition = "2024"
rust-version = "1.91"
license = "MIT"
description = "Generic YGTC flow schema/loader/IR for self-describing component nodes."
repository = "https://github.com/greenticai/greentic-flow"

[features]
default = []
toml = ["dep:toml"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
greentic-interfaces-host = "=0.4.106"
greentic-types = { version = "0.4", features = ["telemetry-autoinit", "schema"] }
serde = { version = "1", features = ["derive"] }
serde_yaml_bw = {package="serde_yaml_gtc", version="2.5.2"}
serde_json = "1"
ciborium = "0.2"
handlebars = "6"
jsonschema = { version = "0.44"}
thiserror = "2"
regex = "1"
indexmap = { version = "2", features = ["serde"] }
lazy_static = "1"
toml = { version = "0.9", optional = true }
tracing = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
blake3 = "1"
pathdiff = "0.2"
sha2 = "0.10"
semver = "1"
greentic-distributor-client = { version = "0.4", default-features = false, features = ["dist-client", "http-runtime"] }
url = "2"
wasmtime = { version = "41", features = ["component-model"] }
wasmtime-wasi = "41"
qa-spec = "=0.4.10"
sys-locale = "0.3"
unic-langid = "0.9"
include_dir = "0.7"
greentic-i18n-translator = { version = "0.4" }
greentic-qa-lib = "=0.4.10"
greentic-interfaces-wasmtime = "=0.4.106"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
pretty_assertions = "1"
insta = "1"
tempfile = "3"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }.tgz"
pkg-fmt = "tgz"
bin-dir = "{ name }-v{ version }-{ target }/{ bin }{ binary-ext }"
targets = [
  "x86_64-unknown-linux-gnu",
  "aarch64-unknown-linux-gnu",
  "x86_64-apple-darwin",
  "aarch64-apple-darwin",
  "x86_64-pc-windows-msvc",
  "aarch64-pc-windows-msvc",
]

[patch.crates-io]
greentic-interfaces = { path = "vendor/greentic-interfaces-0.4.106" }
greentic-interfaces-wasmtime = { path = "vendor/greentic-interfaces-wasmtime-0.4.106" }
