[package]
name = "greentic-flow"
version = "0.4.61"
edition = "2024"
rust-version = "1.91"
license = "MIT"
description = "Generic YGTC flow schema/loader/IR for self-describing component nodes."
repository = "https://github.com/greenticai/greentic-flow"
build = "build.rs"
include = [
  "/Cargo.toml",
  "/Cargo.lock",
  "/README.md",
  "/LICENSE",
  "/build.rs",
  "/frequent-components.json",
  "/src/**",
  "/i18n/**",
  "/schemas/**",
  "/fixtures/**",
  "/tests/**",
]

[features]
default = []
toml = ["dep:toml"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
greentic-interfaces-host = "0.4"
greentic-types = { version = "0.4", features = ["telemetry-autoinit", "schema"] }
serde = { version = "1", features = ["derive"] }
serde_yaml_bw = {package="serde_yaml_gtc", version="2.5.2"}
serde_json = "1"
ciborium = "0.2"
handlebars = "6"
jsonschema = { version = "0.45"}
thiserror = "2"
regex = "1"
indexmap = { version = "2", features = ["serde"] }
lazy_static = "1"
toml = { version = "0.9", optional = true }
tracing = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
blake3 = "1"
pathdiff = "0.2"
sha2 = "0.10"
semver = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
dashmap = "6"
greentic-distributor-client = { version = "0.4", default-features = false, features = ["dist-client", "http-runtime"] }
reqwest = { version = "0.13", default-features = false, features = ["blocking", "rustls"] }
url = "2"
wasmtime = { version = "43", features = ["component-model"] }
wasmtime-wasi = "43"
wasmtime-environ = "43"
qa-spec = "0.4"
sys-locale = "0.3"
unic-langid = "0.9"
include_dir = "0.7"
greentic-i18n-translator = { version = "0.4" }
greentic-qa-lib = "0.4"
greentic-interfaces-wasmtime = "0.4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
pretty_assertions = "1"
insta = "1"
tempfile = "3"

[build-dependencies]
serde_json = "1"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }.tgz"
pkg-fmt = "tgz"
bin-dir = "{ name }-v{ version }-{ target }/{ bin }{ binary-ext }"
targets = [
  "x86_64-unknown-linux-gnu",
  "aarch64-unknown-linux-gnu",
  "x86_64-apple-darwin",
  "aarch64-apple-darwin",
  "x86_64-pc-windows-msvc",
  "aarch64-pc-windows-msvc",
]
